fix get lists and name icon z-index

--- a/page/src/app/components/lists/list/list.component.scss
+++ b/page/src/app/components/lists/list/list.component.scss
@@ -52,6 +52,7 @@
         button.mini-user-fab {
             margin-left: 6px !important;
             float: none;
+            z-index: 0;
         }
 
         button:not(.mini-user-fab) {
