--- a/page/src/variables.scss
+++ b/page/src/variables.scss
@@ -1,4 +1,4 @@
 $nav-bar-height: 78px;
 
-$bgcolors: #ff6f42, #9d9c23, #5b6abf, #ef6191, #00786a, #c1175a, #4184f3, #db4437, #f4b400, #0f9d58, #aa46bb, #00abc0;
-$colors: white, white, white, black, white, white, black, black, black, black, white, black;
+$bgcolors: #ff6f42, #00abc0, #9d9c23, #5b6abf, #ef6191, #00786a, #c1175a, #4184f3, #db4437, #f4b400, #0f9d58, #aa46bb;
+$colors: white, black, white, white, black, white, white, black, black, black, black, white;
